# pinmame

./: .gitignore  Cryptf.aps  Cryptf.dsw  Cryptf.opt  Cryptf.rc  Dockerfile  InstallVPinMAME.dsp  InstallVPinMAME.vcproj  InstallVPinMAME_VC2002.vcproj  InstallVPinMAME_VC2008.vcproj  InstallVPinMAME_VC2012.vcxproj  InstallVPinMAME_VC2012.vcxproj.filters  LICENSE  LibPinMAMETest_VC2015.vcxproj  LibPinMAME_VC2015.vcxproj  LibPinMAME_VC2015.vcxproj.filters  PinMAME.dsp  PinMAME.dsw.tmpl  PinMAME.vcproj  PinMAME32.dsp  PinMAME32_VC2002.vcproj  PinMAME32_VC2008.vcproj  PinMAME32_VC2012.vcxproj  PinMAME32_VC2012.vcxproj.filters  PinMAME_VC2002.sln  PinMAME_VC2002.vcproj  PinMAME_VC2008.vcproj  PinMAME_VC2012.sln  PinMAME_VC2012.vcxproj  PinMAME_VC2012.vcxproj.filters  PinMAME_VC60.dsw.tmpl  PinMAMEdllTest_VC2015.vcxproj  PinMAMEdllTest_VC2015.vcxproj.filters  PinMAMEdllTest_VC2017.vcxproj  PinMAMEdll_VC2015.vcxproj  PinMAMEdll_VC2015.vcxproj.filters  PinMAMEdll_VC2017.vcxproj  PinMAMEdll_VC2017.vcxproj.filters  README.md  README.unixsdl  (+70 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: instvpm.yml  libpinmame.yml  lisy.yml  pinmame.yml  pinmame32.yml  ppuc.yml  prerelease.yml  vpinmame.yml  xpinmame.yml  xpinmame_lisy.yml  xpinmame_ppuc.yml
VPinMAMETest/: Readme.txt  VPinMAMETest.frm  VPinMameTest.vbp  VPinMameTest.vbw
cmake/: asmjit.cmake
cmake/instvpm/: CMakeLists_win-x64.txt  CMakeLists_win-x86.txt
cmake/libpinmame/: CMakeLists.txt  CMakeLists_android-arm64-v8a.txt  CMakeLists_ios-arm64.txt  CMakeLists_linux-x64.txt  CMakeLists_osx-arm64.txt  CMakeLists_osx-x64.txt  CMakeLists_tvos-arm64.txt  CMakeLists_win-arm64.txt  CMakeLists_win-x64.txt  CMakeLists_win-x86.txt
cmake/pinmame/: CMakeLists_win-x64.txt  CMakeLists_win-x86.txt
cmake/pinmame32/: CMakeLists_win-x64.txt  CMakeLists_win-x86.txt
cmake/ppuc/: CMakeLists_linux-arm64.txt  CMakeLists_linux-x64.txt  CMakeLists_linux.txt  CMakeLists_osx-x64.txt  CMakeLists_win-x64.txt  Findlibusb.cmake
cmake/vpinmame/: CMakeLists_win-x64.txt  CMakeLists_win-x86.txt
cmake/xpinmame/: CMakeLists_linux-x64.txt  CMakeLists_osx-aarch64.txt  CMakeLists_osx-x64.txt
cryptf/: Cryptf.cpp  Cryptf.dsp  Cryptf.opt  Cryptf.rc  Cryptfui.cpp  Cryptfui.h  about.cpp  about.h  cryptf.h  cursor1.cur  files.txt  foxpro.h  readme.txt  resource.h
docs/: Install Pinmame in a container Jetson.txt  dmd.md  release_checklist.txt  setup_mingw.txt  setup_raspberry_pi.txt  setup_vc.txt  unix_todo2.txt
ext/: sse2neon.h
ext/basicbitmap/: BasicBitmap.cpp  BasicBitmap.h  BasicBitmap_C.h  BasicBitmap_SSE2.cpp  README.md
ext/dinput/: ddraw64.lib  dsound64.lib  dxguid64.lib
ext/dmddevice/: dmddevice.h  usbalphanumeric.cpp  usbalphanumeric.h
ext/ftdi/: ftd2xx.h
ext/libsamplerate/: common.h  config.h  fastest_coeffs.h  float_cast.h  mid_qual_coeffs.h  samplerate.c  samplerate.h  src_linear.c  src_sinc.c  src_sinc_opt.c  src_zoh.c
ext/pinproc/: pinproc.txt
ext/vgm/: vgmwrite.c  vgmwrite.h
ext/yaml-cpp/: yaml-cpp.txt
ext/ymfm/: ymfm.h  ymfm_opl.cpp  ymfm_opl_pinmame_specific.h  ymfm_opm.cpp  ymfm_opm.h  ymfm_opm_pinmame_specific.h
ext/zlib/: crc32.c  zlib.txt
installguide/: Installation Guide.html  Interface.html
p-roc/includes/: pinproc.h
release/: VPMAlias.txt  alias.txt  bugs.txt  gamelist.txt  history.txt  license.txt  mame.txt  msdos.txt  pinmame.txt  romupd.bat  simulation.txt  visual pinmame.txt  whatsnew.txt  whatsnewVPM.txt  windows.txt
release/cfg/: dir.txt
release/doc_historic_mame/: windows.txt
release/hi/: dir.txt
release/ini/: dir.txt
release/inp/: dir.txt
release/memcard/: dir.txt
release/nvram/: dir.txt
release/proc/: dir.txt
release/snap/: dir.txt
release/sta/: dir.txt
release/wave/: dir.txt
src/: artwork.c  artwork.h  audit.c  audit.h  cheat.c  cheat.h  common.c  common.h  config.c  config.h  core.mak  cpmame.mak  cpuexec.c  cpuexec.h  cpuint.c  cpuint.h  cpuintrf.c  cpuintrf.h  datafile.c  datafile.h  drawgfx.c  drawgfx.h  driver.c  driver.h  fileio.c  fileio.h  harddisk.c  harddisk.h  hash.c  hash.h  hdcomp.c  hiscore.c  hiscore.h  info.c  info.h  inptport.c  inptport.h  input.c  input.h  legacy.h  (+49 more)
src/Win32/: Avi.c  Avi.h  Bitmask.c  Bitmask.h  ColumnEdit.c  ColumnEdit.h  DDrawDisplay.c  DDrawDisplay.h  DDrawWindow.c  DDrawWindow.h  DIJoystick.c  DIJoystick.h  (+90 more)
src/unix/contrib/patches/: alsa.c  boundary-check-patch  configure.in  esound.diff  readme  word-align-patch
src/wpc/altsound/: CMakeLists.txt  altsound2_csv_parser.cpp  altsound2_csv_parser.hpp  altsound2_processor.cpp  altsound2_processor.hpp  altsound_csv_parser.cpp  altsound_csv_parser.hpp  altsound_data.cpp  altsound_data.hpp  altsound_file_parser.cpp  altsound_file_parser.hpp  altsound_ini_processor.cpp  altsound_ini_processor.hpp  altsound_logger.cpp  altsound_logger.hpp  altsound_processor.cpp  altsound_processor.hpp  altsound_processor_base.cpp  altsound_processor_base.hpp  gsound_csv_parser.cpp  gsound_csv_parser.hpp  gsound_processor.cpp  gsound_processor.hpp  main.cpp  miniaudio_bass_compat.cpp  miniaudio_bass_compat.hpp  miniaudio_private.c  miniaudio_private.h  snd_alt.cpp  snd_alt.h
src/wpc/altsound/cmake/: helper_fns.cmake
tests/: test_invariant_lisy1_control.c
vcproj/: InstallVPinMAME.dsp  InstallVPinMAME_VC2008.vcproj  InstallVPinMAME_VC2012.vcxproj  InstallVPinMAME_VC2012.vcxproj.filters  LibPinMAMETest_VC2015.vcxproj  LibPinMAMETest_VC2015.vcxproj.filters  LibPinMAME_VC2015.vcxproj  LibPinMAME_VC2015.vcxproj.filters  PinMAME.dsp  PinMAME32.dsp  PinMAME32_VC2008.vcproj  PinMAME32_VC2012.vcxproj  PinMAME32_VC2012.vcxproj.filters  PinMAME_VC2008.sln  PinMAME_VC2008.vcproj  PinMAME_VC2012.vcxproj  PinMAME_VC2012.vcxproj.filters  PinMAME_VC2026.slnx  VPinMAME.dsp  VPinMAME_VC2008.vcproj  VPinMAME_VC2012.vcxproj  VPinMAME_VC2012.vcxproj.filters  asmjit.props  create_vc2013_from_vc2012.bat  create_vc2017_from_vc2012.bat  create_vc2019_from_vc2012.bat  create_vc2022_from_vc2012.bat  create_vc2026_from_vc2012.bat  win_build.bat  win_build_help.txt
zlib/: zlib.lib  zlibstatmt.lib  zlibstatmtd.lib
(+1361 files in other folders)
